fixed the copyright spacing

--- a/themes/perfecttheme/assets/scss/_main.scss
+++ b/themes/perfecttheme/assets/scss/_main.scss
@@ -173,19 +173,19 @@ header {
     }
     
     h1 {
-        font-size: clamp(2rem, 2vw, 2rem);
+        font-size: clamp(2rem, 2.3vw, 2.3rem);
         line-height: 1.2;
         margin: 3rem 0 1.38rem 0;
     }
     
     h2 {
-        font-size: clamp(1.6rem, 2vw, 2rem);
+        font-size: clamp(1.8rem, 2vw, 2rem);
         line-height: 1.1;
         margin: 3rem 0 1.38rem 0;
     }
 
     h3 {
-        font-size: clamp(1.5rem, 1.618vw, 1.618rem);
+        font-size: clamp(1.7rem, 1.7vw, 1.7rem);
         font-weight: 600;
         letter-spacing: .5px;
         line-height: 1.3;
